A new fix of apos

--- a/app/src/main/res/values-ua/help.xml
+++ b/app/src/main/res/values-ua/help.xml
@@ -169,8 +169,8 @@
 дійсна протягом обмеженого часу. Зворотний відлік можна побачити на кнопці
 витрати \"Витрата\". Курс обміну може відрізнятися від того, що був показаний на попередніх екранах.</p>
         <h2>Секретний ключ XMR.TO<h2>
-        <p>Так як Monerujo відповідає за ту частину транзакції, яка пов'язана з Monero, для відстеження
-вашого замовлення, яка пов'язана з Bitcoin, можна використовувати секретний ключ на домашній сторінці
+        <p>Так як Monerujo відповідає за ту частину транзакції, яка повязана з Monero, для відстеження
+вашого замовлення, яка повязана з Bitcoin, можна використовувати секретний ключ на домашній сторінці
 XMR.TO.</p>
         <p>Слід памятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
 початку транзакції!</p>
@@ -185,7 +185,7 @@ XMR.TO.</p>
         <p>XMR.TO є стороннім сервісом, який допомагає здійснювати обмін Monero на Bitcoin.
 Ми використовуємо API служби XMR.TO для інтеграції платежів з використанням Bitcoin в Monerujo.
 Будь ласка, відвідайте https://xmr.to, і виріште, чи хочете ви використовувати цю можливість.
-Команда Monerujo не пов'язана з XMR.TO і не може допомогти вам в роботі з цією службою.</p>
+Команда Monerujo не повязана з XMR.TO і не може допомогти вам в роботі з цією службою.</p>
         <h2>Курс обміну XMR.TO<h2>
         <p>На екрані вказівки \"Сума\" відображаються поточні параметри служби XMR.TO.
 Тут також відображається обмінний курс, верхні і нижні межі BTC. Необхідно відзначити,
