fixed the apostrophe issue

--- a/app/src/main/res/values-eo/about.xml
+++ b/app/src/main/res/values-eo/about.xml
@@ -42,7 +42,7 @@
         <li>FILMILO : Skani QR-kodojn por ricevi Monerojn</li>
         </ul>
         <h2>Ŝanĝoj de la privateca politiko</h2>
-        <p>Ni eble ĝisdatigos tiun privatecan politikon de temp' al tempo. Ni
+        <p>Ni eble ĝisdatigos tiun privatecan politikon de temp\' al tempo. Ni
         sciigos vin pri ĉiu ŝanĝo tiel : ni sendos la novan privatecan politikon en la
         aplikaĵon kaj sur la retejo (www.monerujo.io)
         Ni konsilas al vi, ke vi regule gvatu tiun dokumenton kaze de ŝanĝoj.
