--- a/app/src/main/res/values-fr/help.xml
+++ b/app/src/main/res/values-fr/help.xml
@@ -153,14 +153,14 @@
         <p>C’est l’adresse publique du portefeuille auquel vous allez envoyer des Moneroj, vous pouvez
         la copier/coller, scanner un QR code ou la saisir manuellement. Vérifiez là bien trois fois
         afin de vous assurer que vous n’envoyez pas de pièces à la mauvaise adresse.</p>
-        <p>In addition to using an XMR address, you can also use
+        <p>En complément de l’utilisation d'une adresse XMR, vous pouvez aussi utiliser
         <ul>
-            <li>an OpenAlias for XMR or BTC</li>
-            <li>a BTC address</li>
-            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+            <li>une adresse OpenAlias pour XMR ou BTC</li>
+            <li>une adresse BTC</li>
+            <li>une URI bitcoin: (incluant BIP70 comme bitpay)</li>
         </u>
-        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
-        for details). See the section on sending BTC below.</p>
+        Notez que l’envoi de BTC est traité à travers le service XMR.TO (voir https://xmr.to pour
+        plus de détails). Voir la rubrique sur l’envoi de BTC plus bas.</p>
         <h2>ID de Paiement</h2>
         <p>Vous pouvez utiliser un ID de paiement pour identifier la raison pour laquelle vous avez
         envoyé des Moneroj entre deux parties. C’est totallement privé et optionnel. Il permet par
@@ -313,14 +313,14 @@
     <!-- Note for translators: new/changed text also in help_send -->
 
     <string name="help_uri"><![CDATA[
-        <h1>Using a payment link</h1>
-        <p>You have started monerujo with a payment link. In order to send funds, please do the following:</p>
+        <h1>Utiliser un lien de paiement</h1>
+        <p>Vous avez démarré monerujo avec un lien de paiement. Afin d’envoyer des fonds, merci de procéder comme suit :</p>
         <p>
-        1. Open the wallet you want to spend from<br>
-        2. Wait until the wallet is synced &amp; the "Give" button appears<br>
-        3. Touch the "Give" button
+        1. Ouvrez le portefeuille à partir duquel vous souhaitez envoyer des fonds<br>
+        2. Attendez que le portefeuille soit synchronisé &amp; que le bouton "Envoyer" apparaisse<br>
+        3. Taper sur le bouton "Envoyer"
         </p>
-        <p>The payment details will be filled in. Check them and proceed like for any other transaction.</p>
+        <p>Les détails du paiement seront remplis. Vérifiez-les et procédez de la même manière que pour toute autre transaction.</p>
     ]]></string>
 
     <string name="help_ok">Got it!</string> <!-- Note: "Got it" as in "I understand this" -->
