--- a/app/src/main/res/values-de/help.xml
+++ b/app/src/main/res/values-de/help.xml
@@ -144,14 +144,14 @@
         <p>Dies ist die öffentliche Adresse der Wallet, an die du Moneroj sendest. Du kannst sie aus der Zwischenablage kopieren,
 	einen QR-Code scannen oder sie manuell eingeben. Vergewissere dich, dass es die richtige Adresse ist, um
         sicherzustellen, die Moneroj nicht irrtümlich an eine falsche Adresse zu senden.</p>
-        <p>###translation needed###In addition to using an XMR address, you can also use
+        <p>Zusätzlich zu einer normalen Monero-Adresse kannst du auch
         <ul>
-            <li>an OpenAlias for XMR or BTC</li>
-            <li>a BTC address</li>
-            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+            <li>einen OpenAlias für XMR oder BTC</li>
+            <li>eine BTC-Adresse</li>
+            <li>eine Bitcoin: URI (inklusive BIP70 – wie BitPay)</li>
         </u>
-        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
-        for details). See the section on sending BTC below.</p>
+        BEachte bitte, dass das Senden von BTC über den Service von XMR.TO erfolgt. (Siehe https://xmr.to
+        für Details). Weitere Details sind weiter unten unter "BTC senden".</p>
         <h2>Zahlungs-ID</h2>
         <p>Du kannst eine Zahlungs-ID benutzen, um den Grund einer Transaktion zwischen zwei Parteien zu identifizieren. Dies ist optional
 	und nicht öffentlich einsehbar. Zum Beispiel kann ein Unternehmen damit Zahlungen und Verkäufe miteinander verbinden.<p>
@@ -220,11 +220,11 @@
 
     <string name="help_wallet"><![CDATA[
         <h1>Die Wallet</h1>
-        <h2>###translation needed###Street Mode</h2>
-        <p>Street mode can be enabled/disabled in the menu or Gunther\'s head icon. In this mode, your
-        balance is not shown on any screen so you can safely use your wallet on the street, a pub or
-        other public place. Previous transactions are also hidden. New transactions will be shown, so
-        you can see that you have sent/received sweet Moneroj!</p>
+        <h2>Straßenmodus</h2>
+        <p>Der Straßenmodus kann Menu unterhalb Gunthers Kopfsymbol an- und ausgeschaltet werden. In diesem Modus wird dein
+        Guthaben in keinem Menupunkt angezeigt, sodass du deine Wallet gefahrlos auf der Straße, in einer Bar oder
+        anderem öffentlichen Ort nutzen kannst. Vorherige Transaktionen sind ebenfalls verborgen. Neue Transaktionen werden angezeigt, damit
+        du sehen kannst, wenn du diese genialen Moneroj versendet oder empfangen hast!</p>
         <h2>Scannen</h2>
         Weil Monero gerne Dinge geheim hält, wird nach jedem Öffnen einer Monerujo-Wallet die Blockchain gescannt,
 	um zu überprüfen, ob neue Moneroj zu dieser Wallet gesendet wurden. Dies speichert ausschließlich Informationen,
@@ -241,65 +241,65 @@
 
     <string name="help_node"><![CDATA[
         <h1>Nodes</h1>
-        <h2>###translation needed###TL;DR</h2>
-        <p>Refresh the nodes list by pulling down &amp; bookmark 3&#8211;5 nodes to allow Monerujo
-        to choose the best one for you!</p>
-        <h2>What&apos;s a Node?</h2>
-        <p>Monerujo uses a Remote Node (sometimes also called Daemon) to communicate with
-        the Monero Network without having to download and store a copy of the
-        whole blockchain itself.<p>
-        <h2>Node List</h2>
-        <p>If the list is empty, you can either add new nodes manually or let Monerujo
-        scan the network for you. Or both. Read on&#8230;</p>
-        <p>The node list shows all currently known nodes. Additionally, the timestamp
-        of the latest block known to each node is shown under the node name. An icon
-        representing the node&apos;s response behaviour
-        (which indicates the level of connectivity to be expected)
-        is shown next to each node.</p>
-        <p>Any node in the list can be bookmarked for later use.
-        Nodes which are not bookmarked will be forgotten.<p>
-        <p>Monerujo will choose the optimal bookmarked node each time you use it.
-        It does this by checking the blockheight (how up-to-date
-        is the node?) as well as the response behaviour (how fast does the node respond to requests?).</p>
-        <p>The list is sorted by these characteristics, so the top node would be the one Monerujo
-        would choose right now. The bottom of the list would show very slow or unavailable nodes.</p>
-        <h2>Add a Node</h2>
-        <p>By touching the &quot;Add Node&quot; button at the bottom, you will be asked to
-        enter the node details in the following dialog.
-        The &quot;Address&quot; is the hostname or IP-address of the node - this is the only
-        mandatory entry.
-        Enter the &quot;Port&quot; if the node runs on a non-default port (e.g. 18089).
-        You can also optionally name the node, so you can identify it easier later on.
-        Some nodes require credentials to use them. Enter the provided username &amp;
-        password in the appropriate fields. Now you can &quot;Test&quot; these setting.
-        The &quot;Test Results&quot; will display the blockheight, response time and actual IP used.
-        The result may also be an error - usually because the hostname provided is
-        not reachable in a sensible amount of time or the credentials are incorrect.
-        Or the hostname/port combination does not point to an actual Monero Node!
-        Once the test passes (no error) - you&apos;re set to press &quot;OK&quot; to save &amp;
-        bookmark this node.</p>
-        <h2>Scan for Nodes</h2>
-        <p>Additionally, you can scan the network for nodes. Monerujo will start
-        scanning the network for Remote Nodes on port 18089. It begins by asking your
-        bookmarked nodes for other peers in the Monero P2P network and then continues
-        by asking those for their peers, and so on. If you have no bookmarked nodes
-        (or they don&apos;t tell us about their peers),
-        Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
-        scan stops when it finds 10 remote nodes in total.</p>
+        <h2>Kurzfassung</h2>
+        <p>Aktualisiere die Liste der Nodes, indem du nach unten ziehst &amp; merke 5 davon vor, um es Monerujo zu ermöglichen, 
+        den bestmöglichen für dich auszuwählen!</p>
+        <h2>Was ist ein Node?</h2>
+        <p>Monerujo nutzt einen Drittanbieter-Node (Manchmal auch Hintergrunddienst genannt), um mit 
+        dem Monero-Netzwerk zu kommunizieren, ohne die Blockchain selbst herunterladen und 
+        speichern zu müssen.<p>
+        <h2>Node-Liste</h2>
+        <p>Wenn die Liste leer ist, kannst du entweder selbst manuell neue Nodes hinzufügen oder Monerujo
+        das Netzwerk für dich scannen lassen. Oder beides. Weiterlesen&#8230;</p>
+        <p>Die Node-Liste zeigt alle derzeit bekannten Nodes an. Außerdem wird der Zeitstempel
+        des letzten, diesem Node bekannten, Block unter dem Namen eines jeden Nodes angezeigt. Ein Icon,
+        das das Reaktionsverhalten dieses Nodes anzeigt, 
+        (was die zu erwartende Verbindungsqualität anzeigt)
+        wird neben jedem Node angezeigt.</p>
+        <p>Jeder Node in dieser Liste kann für spätere Verwendung vorgemerkt werden.
+        Nicht vorgemerkte Nodes werden vergessen.<p>
+        <p>Jedes Mal wenn du Monerujo nutzt, wird es aus den vorgemerkten Nodes den optimalen auswählen.
+        Das macht es, indem es die Blockhöhe (wie aktuell
+         ist der Node?) sowie das Reaktionsverhalten (wie schnell reagiert der Node auf Anfragen?) prüft.</p>
+        <p>Die Liste wird anhand dieser Eigenschaften geordnet. Der oberste ist also immer der, den Monerujo
+        momentan auswählen würde. Ganz unten in der Liste würden sehr langsame oder nicht erreichbare Nodes angezeigt werden.</p>
+        <h2>Füge einen Node hinzu</h2>
+        <p>Wenn du den &quot;Node hinzufügen&quot; Button unten berührst, wirst du nach den
+        Node-Details im nachfolgenden Dialog gefragt werden.
+        Die &quot;Adresse&quot; ist die Web- oder IP-Adresse des Nodes – dies ist der einzig
+        notwendige Eintrag.
+        Gebe den &quot;Port&quot; ein, wenn der Node nicht den standardmäßigen Port (also 18089) benutzt.
+        Du kannst auch optional den Node benennen, damit du ihn später einfacher identifizieren kannst.
+        Einige Nodes erfordern Login-Informationen, um sie zu benutzen. Gebe den dir zugekommenen Nutzernamen &amp;
+        und das Password in die entsprechenden Felder ein. Jetzt kannst du diese Einstellung &quot;Testen&quot;.
+        Die &quot;Testergebnisse&quot; werden die Blockhöhe, Reaktionszeit und verwendete IP anzeigen.
+        Das Ergebnis kann aber auch fehlerbehaftet sein – meistens weil die eingegebene Webadresse
+        im Moment nicht in einer vertretbaren Zeit erreicht werden konnte, oder weil die Login-Informationen falsch waren.
+        Oder die Kombination aus Webadresse und Port zeigt nicht auf einen richtigen Monero-Node!
+        Wenn der Test bestanden wird (keine Fehler), kannst du &quot;OK&quot; drücken, um diesen Node zu speichern&amp;
+        und vorzumerken.</p>
+        <h2>Suche nach Nodes</h2>
+        <p>Außerdem kannst du das Netzwerk nach Nodes durchsuchen. Monerujo wird
+        das Netzwerk nach Drittanbieter-Nodes auf Port 18089 durchsuchen. Es fängt damit an, deine
+        vorgemerkten Nodes nach anderen Teilnehmern im Monero-P2P-Netzwerk zu fragen und fährt dann damit fort,
+        diese nach ihren Verbindungen zu fragen und so weiter. Wenn du keine vorgemerkten Nodes hast
+        (oder diese uns nicht über ihre Verbidungen informieren),
+        wird sich Monerujo direkt zu den, in Monero fest eingebetteten, Ursprungsnodes verbinden. Die
+        Suche stoppt, wenn insgesamt 10 Nodes gefunden wurden.</p>
     ]]></string>
 
     <!-- Note for translators: new/changed text also in help_send -->
 
     <string name="help_uri"><![CDATA[
-        <h1>Using a payment link</h1>
-        <p>You have started monerujo with a payment link. In order to send funds, please do the following:</p>
+        <h1>Nutzung eines Zahlungslinks</h1>
+        <p>Du hast Monerujo mit einem Zahlungslink gestartet. Mache bitte folgenden, um Gelder zu versenden:</p>
         <p>
-        1. Open the wallet you want to spend from<br>
-        2. Wait until the wallet is synced &amp; the "Give" button appears<br>
-        3. Touch the "Give" button
+        1. Öffne die Wallet, von der aus du senden möchtest<br>
+        2. Warte, bis die Wallet synchronisiert ist &amp; der "Sende" Button erscheint<br>
+        3. Drücke den "Sende" Button
         </p>
-        <p>The payment details will be filled in. Check them and proceed like for any other transaction.</p>
+        <p>Die Zahlungsdetails werden ausgefüllt. Überprüfe sie und fahre fort wie bei jeder anderen Transaktion.</p>
     ]]></string>
 
-    <string name="help_ok">Got it!</string> <!-- Note: "Got it" as in "I understand this" -->
+    <string name="help_ok">Hab\'s verstanden!</string> <!-- Note: "Got it" as in "I understand this" -->
 </resources>
