Update translation for "Using a payment link"

--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -226,7 +226,7 @@
     ]]></string>
 
     <string name="help_uri"><![CDATA[
-        <h1>你正在使用付款網址</h1>
+        <h1>使用付款網址</h1>
         <p>Monerujo 已經透過付款網址啟動。若要繼續發送資金，請依照下方所述進行操作：</p>
         <p>
         1. 開啟欲發送資金之錢包<br>
