--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -146,7 +146,7 @@
         <p>Это публичный адрес кошелька, на который вы отправляете Monero. Вы можете скопировать его
 	из буфера, отсканировать QR-код или ввести вручную. Следует трижды проверить правильность
 	этого адреса, чтобы не отправить монеты на ошибочный адрес.</p>
-        <p>In addition to using an XMR address, you can also use
+        <p>Помимо использования адреса XMR, вы также можете использовать
         <ul>
             <li>OpenAlias для XMR или BTC</li>
             <li>BTC адрес</li>
