--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -146,14 +146,14 @@
         <p>Это публичный адрес кошелька, на который вы отправляете Monero. Вы можете скопировать его
 	из буфера, отсканировать QR-код или ввести вручную. Следует трижды проверить правильность
 	этого адреса, чтобы не отправить монеты на ошибочный адрес.</p>
-        <p>In addition to using an XMR address, you can also use
+        <p>Помимо использования адреса XMR, вы также можете использовать
         <ul>
-            <li>an OpenAlias for XMR or BTC</li>
-            <li>a BTC address</li>
-            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+            <li>OpenAlias для XMR или BTC</li>
+            <li>BTC адрес</li>
+            <li>bitcoin: URI (включая BIP70, как и bitpay)</li>
         </u>
-        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
-        for details). See the section on sending BTC below.</p>
+        Обращаем ваше внимание, что отправка BTC выполняется через сервис XMR.TO (посетите https://xmr.to
+        для получения доп. информации). Ознакомьтесь с разделом об отправке BTC ниже.</p>
         <h2>Идентификатор оплаты (Payment ID)</h2>
         <p>Вы можете использовать Payment ID для идентификации причины, по которой Monero передаётся
 	между двумя сторонами. Это опциональная и конфиденциальная операция. Например,
@@ -229,11 +229,12 @@
 
     <string name="help_wallet"><![CDATA[
         <h1>Кошелек</h1>
-        <h2>Street Mode</h2>
-        <p>Street mode can be enabled/disabled in the menu or Gunther\'s head icon. In this mode, your
-        balance is not shown on any screen so you can safely use your wallet on the street, a pub or
-        other public place. Previous transactions are also hidden. New transactions will be shown, so
-        you can see that you have sent/received sweet Moneroj!</p>
+        <h2>Уличный режим</h2>
+        <p>Уличный режим можно включить/отключить в меню или через иконку головы Гюнтера. В этом режиме
+        ваш баланс не будет отображаться, и вы можете безопасно пользоваться своим кошельком на улице,
+        в пабе или другом общественном месте. Предыдущие транзакции будут скрыты. Для отображения
+        будут доступны только новые транзакции, поэтому вы всегда сможете увидеть, что получили или
+        успешно отправили сладенькие Moneroj!</p>
         <h2>Сканирование</h2>
         Поскольку Monero ориентирована на подержание анонимности, всякий раз, когда вы открываете кошелёк
 	Monerujo, нам приходится сканировать блокчейн, чтобы посмотреть, были ли отправлены на ваш кошелёк
@@ -251,66 +252,64 @@
     ]]></string>
 
     <string name="help_node"><![CDATA[
-        <h1>Nodes</h1>
-        <h2>TL;DR</h2>
-        <p>Refresh the nodes list by pulling down &amp; bookmark 3&#8211;5 nodes to allow Monerujo
-        to choose the best one for you!</p>
-        <h2>What&apos;s a Node?</h2>
-        <p>Monerujo uses a Remote Node (sometimes also called Daemon) to communicate with
-        the Monero Network without having to download and store a copy of the
-        whole blockchain itself.<p>
-        <h2>Node List</h2>
-        <p>If the list is empty, you can either add new nodes manually or let Monerujo
-        scan the network for you. Or both. Read on&#8230;</p>
-        <p>The node list shows all currently known nodes. Additionally, the timestamp
-        of the latest block known to each node is shown under the node name. An icon
-        representing the node&apos;s response behaviour
-        (which indicates the level of connectivity to be expected)
-        is shown next to each node.</p>
-        <p>Any node in the list can be bookmarked for later use.
-        Nodes which are not bookmarked will be forgotten.<p>
-        <p>Monerujo will choose the optimal bookmarked node each time you use it.
-        It does this by checking the blockheight (how up-to-date
-        is the node?) as well as the response behaviour (how fast does the node respond to requests?).</p>
-        <p>The list is sorted by these characteristics, so the top node would be the one Monerujo
-        would choose right now. The bottom of the list would show very slow or unavailable nodes.</p>
-        <h2>Add a Node</h2>
-        <p>By touching the &quot;Add Node&quot; button at the bottom, you will be asked to
-        enter the node details in the following dialog.
-        The &quot;Address&quot; is the hostname or IP-address of the node - this is the only
-        mandatory entry.
-        Enter the &quot;Port&quot; if the node runs on a non-default port (e.g. 18089).
-        You can also optionally name the node, so you can identify it easier later on.
-        Some nodes require credentials to use them. Enter the provided username &amp;
-        password in the appropriate fields. Now you can &quot;Test&quot; these setting.
-        The &quot;Test Results&quot; will display the blockheight, response time and actual IP used.
-        The result may also be an error - usually because the hostname provided is
-        not reachable in a sensible amount of time or the credentials are incorrect.
-        Or the hostname/port combination does not point to an actual Monero Node!
-        Once the test passes (no error) - you&apos;re set to press &quot;OK&quot; to save &amp;
-        bookmark this node.</p>
-        <h2>Scan for Nodes</h2>
-        <p>Additionally, you can scan the network for nodes. Monerujo will start
-        scanning the network for Remote Nodes on port 18089. It begins by asking your
-        bookmarked nodes for other peers in the Monero P2P network and then continues
-        by asking those for their peers, and so on. If you have no bookmarked nodes
-        (or they don&apos;t tell us about their peers),
-        Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
-        scan stops when it finds 10 remote nodes in total.</p>
+        <h1>Узлы</h1>
+        <h2>МНОГА БУКАФ, НИАСИЛИЛ</h2>
+        <p>Обновите ваш список узлов, потянув вниз в разделе &amp; закладок 3&#8211;5 , чтобы Monerujo
+        мог выбрать лучший узел для вас!</p>
+        <h2>Что такое&apos; узлы?</h2>
+        <p>Monerujo использует удаленные узлы (их также называют Daemon), для связи с сетью
+        Monero без необходимости загружать и хранить копию всего блокчейна на устройстве.<p>
+        <h2>Список узлов</h2>
+        <p>Если список пуст, вы можете добавить новые узлы вручную или разрешить Monerujo
+        сканировать сеть. Возможны оба варианта. Подробнее&#8230;</p>
+        <p>Список узлов показывает все известные на данный момент узлы. Кроме того, отметка
+        времени последнего блока известна каждому узлу и отображается под именем узла. Рядом
+        с каждым узлом отображается значок, представляющий поведение ответа узла&apos;
+        (указывает на расчетный уровень подключения)</p>
+        <p>Любой узел из списка можно добавить в закладки для последующего использования.
+        Узлы, не добавленные в закладки, будут забыты.<p>
+        <p>Monerujo будет выбирать оптимальный узел из закладок каждый раз, когда вы используете его.
+        Он делает это, проверяя высоту блока (насколько актуален
+        узел), а также поведение ответа (как быстро узел отвечает на запросы?).</p>
+        <p>Список сортируется по данным характеристикам, верхний узел будет тем, кому Monerujo
+        отдаст наибольшее предпочтение при подключении. В нижней части списка будут отображаться
+        медленные или недоступные узлы.</p>
+        <h2>Добавить узел</h2>
+        <p>При нажатии на кнопку &quot;Добавить узел&quot; вам будет предложено ввести сведения
+        об узле в следующем диалоговом окне.
+        &quot;Адрес&quot; - имя хоста или IP-адрес узла, это единственный обязательный параметр.
+        Введите &quot;Порт&quot; если данный узел работает не на стандартном порте (например, 18089).
+        Вы также можете дать наименование для данного узла, это может помочь при его поиске в списке.
+        Введите имя пользователя &amp; и пароль в соответствующих полях. Теперь вы можете
+        &quot;Проверить&quot; эти настройки.
+        В результатах &quot;Проверки&quot; будет отображаться высота блока, время отклика и фактический IP-адрес.
+        Результатом также может быть ошибка, обычно потому, что введенный адрес не ответил
+        в доступные сроки или введенные данные просто неверны.
+        Или комбинация из адреса хоста/порта не указывает на фактический узел Monero!
+        После того, как тест пройден (без ошибок), вам&apos; необходимо нажать &quot;OK&quot; для сохранения &amp;
+        данного узла в закладки.</p>
+        <h2>Сканирование узлов</h2>
+        <p>Кроме того, вы можете сканировать сеть на наличие узлов. Monerujo начнет
+        сканирование сети на наличие удаленных узлов через порт 18089. Процесс начинает с того, что
+        Monerujo запрашивает у ваших узлов в адресной книге другие адреса узлов в сети Monero P2P,
+        а затем продолжает, запрашивая у них другие одноранговые узлы. Если у вас нет узлов в
+        закладках (или они не возвращают нам ответные данные), Monerujo перейдет к узлам Monero,
+        которые добавлены в код Monero. Сканирование останавливается, когда будет найдено 10
+        удаленных узлов.</p>
     ]]></string>
 
     <!-- Note for translators: new/changed text also in help_send -->
 
     <string name="help_uri"><![CDATA[
-        <h1>Using a payment link</h1>
-        <p>You have started monerujo with a payment link. In order to send funds, please do the following:</p>
+        <h1>Использование платежной ссылки</h1>
+        <p>Вы начали использование monerujo с платежной ссылкой. Для отправки средств, пожалуйста, выполните следующее:</p>
         <p>
-        1. Open the wallet you want to spend from<br>
-        2. Wait until the wallet is synced &amp; the "Give" button appears<br>
-        3. Touch the "Give" button
+        1. Откройте кошелек, с которого будет происходить трата<br>
+        2. Подождите, пока кошелек не будет синхронизирован &amp; появится кнопка "Передать"<br>
+        3. Нажмите на кнопку "Передать"
         </p>
-        <p>The payment details will be filled in. Check them and proceed like for any other transaction.</p>
+        <p>Платежные реквизиты будут заполнены. Проверьте их и действуйте, как в случае с любой другой транзакцией.</p>
     ]]></string>
 
-    <string name="help_ok">Got it!</string> <!-- Note: "Got it" as in "I understand this" -->
+    <string name="help_ok">Я понял!</string> <!-- Note: "Got it" as in "I understand this" -->
 </resources>
