--- a/app/src/main/res/values-pt/help.xml
+++ b/app/src/main/res/values-pt/help.xml
@@ -141,14 +141,14 @@
         <p> Este é o endereço público da carteira para a qual vais enviar Moneroj, podes copiar esta
         informação da área de transferência, capturara um código QR, ou introduzir manualmente. Confirma
         atentamente que não estás a enviar para o endereço errado.</p>
-        <p>In addition to using an XMR address, you can also use
+        <p>Para alem de usar um endereço de XMR também podes usar
         <ul>
-            <li>an OpenAlias for XMR or BTC</li>
-            <li>a BTC address</li>
-            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+            <li>Um OpenAlias para XMR ou BTC</li>
+            <li>um endereço de BTC</li>
+            <li>um enderço bitcoin: URI (incluindo BIP70 tipo bitpay)</li>
         </u>
-        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
-        for details). See the section on sending BTC below.</p>
+	Não deixar de notar que, enviar BTC é processado através do serviço XMR.TO (ver https://xmr.to
+	para detalhes). Ver a secção enviar BTC.</p>
         <h2>ID do Pagamento</h2>
         <p>Utiliza-se o ID do Pagamento para identificar a razão porque foram transaccionados Moneroj.
         Isto é opcional e privado. Por exemplo, isto permite que um negócio identifique que item
@@ -213,24 +213,25 @@
     ]]></string>
 
     <string name="help_create_ledger"><![CDATA[
-        <h1>Create Wallet - Ledger</h1>
-        <p>You want to recover your wallet from your Ledger Nano S device.</p>
-        <p>Your secret keys never leave the Ledger device, so you need it plugged in every
-        time you want to access your wallet.</p>
-        <p>Enter a unique wallet name and password. The password is used for securing your wallet data on the Android
-        device. Use a strong password - even better use a passphrase.</p>
-        <p>Enter the block number of the first transaction used for this address in the
-        field \"Restore Height\". You can also use a date in the format YYYY-MM-DD. If you are not sure,
-        enter an approximate date/blockheight <em>before</em> you first used this wallet address.</p>
+        <h1>Criar carteira - Ledger</h1>
+        <p>Se quiseres recuperar a tua carteira apartir do teu dispositivo Ledger Nano S.</p>
+	<p>As tuas chaves secretas nunca saem do teu dispositivo Ledger, consequentemente 
+	tens de conetar o mesmo sempre que quiseres aceder à tua carteira.</p>
+        <p>Introduz um nome e palavra passe unicos. A palavra passe é usada para garantir a segurança 
+	da tua informação no dispositivo Android. Usa uma palavra passe forte!</p>
+	<p>Introduz o numero do bloco da primeira transação correspondente a este endereço no campo
+	 \"Restore Height\". Podes tambem usar o formato ano mês dia ANO-MES-DIA. Se não tiveres 
+	certeza, introduz uma data/numero do bloco aproximada <em>antes</em> da primeira utilização
+	da carteira.</p>
     ]]></string>
 
     <string name="help_wallet"><![CDATA[
         <h1>A Carteira</h1>
         <h2>Street Mode</h2>
-        <p>Street mode can be enabled/disabled in the menu or Gunther\'s head icon. In this mode, your
-        balance is not shown on any screen so you can safely use your wallet on the street, a pub or
-        other public place. Previous transactions are also hidden. New transactions will be shown, so
-        you can see that you have sent/received sweet Moneroj!</p>
+        <p>O Street mode pode ser ligado/desligado no menu ou na cabeça do icon Gunther. Neste modo
+	o teu saldo não é mostrado no teu ecrã para que possas usar a tua carteira de forma segura 
+	na rua, num bar ou outro local publico. As transações anteriores são também escondidas. As novas 
+	transações serão mostradas, para que cossas ver se enviaste/recebeste os teus preciosos Moneroj!</p>
         <h2>A Examinar</h2>
         Como o Monero gosta de manter as coisas privadas, cada vez que abres uma carteira Monerujo temos
         que examinar a blockchain para ver se novos Moneroj foram enviados para a tua carteira. Apenas
@@ -248,66 +249,61 @@
     ]]></string>
 
     <string name="help_node"><![CDATA[
-        <h1>Nodes</h1>
+        <h1>Nós</h1>
         <h2>TL;DR</h2>
-        <p>Refresh the nodes list by pulling down &amp; bookmark 3&#8211;5 nodes to allow Monerujo
-        to choose the best one for you!</p>
-        <h2>What&apos;s a Node?</h2>
-        <p>Monerujo uses a Remote Node (sometimes also called Daemon) to communicate with
-        the Monero Network without having to download and store a copy of the
-        whole blockchain itself.<p>
-        <h2>Node List</h2>
-        <p>If the list is empty, you can either add new nodes manually or let Monerujo
-        scan the network for you. Or both. Read on&#8230;</p>
-        <p>The node list shows all currently known nodes. Additionally, the timestamp
-        of the latest block known to each node is shown under the node name. An icon
-        representing the node&apos;s response behaviour
-        (which indicates the level of connectivity to be expected)
-        is shown next to each node.</p>
-        <p>Any node in the list can be bookmarked for later use.
-        Nodes which are not bookmarked will be forgotten.<p>
-        <p>Monerujo will choose the optimal bookmarked node each time you use it.
-        It does this by checking the blockheight (how up-to-date
-        is the node?) as well as the response behaviour (how fast does the node respond to requests?).</p>
-        <p>The list is sorted by these characteristics, so the top node would be the one Monerujo
-        would choose right now. The bottom of the list would show very slow or unavailable nodes.</p>
-        <h2>Add a Node</h2>
-        <p>By touching the &quot;Add Node&quot; button at the bottom, you will be asked to
-        enter the node details in the following dialog.
-        The &quot;Address&quot; is the hostname or IP-address of the node - this is the only
-        mandatory entry.
-        Enter the &quot;Port&quot; if the node runs on a non-default port (e.g. 18089).
-        You can also optionally name the node, so you can identify it easier later on.
-        Some nodes require credentials to use them. Enter the provided username &amp;
-        password in the appropriate fields. Now you can &quot;Test&quot; these setting.
-        The &quot;Test Results&quot; will display the blockheight, response time and actual IP used.
-        The result may also be an error - usually because the hostname provided is
-        not reachable in a sensible amount of time or the credentials are incorrect.
-        Or the hostname/port combination does not point to an actual Monero Node!
-        Once the test passes (no error) - you&apos;re set to press &quot;OK&quot; to save &amp;
-        bookmark this node.</p>
-        <h2>Scan for Nodes</h2>
-        <p>Additionally, you can scan the network for nodes. Monerujo will start
-        scanning the network for Remote Nodes on port 18089. It begins by asking your
-        bookmarked nodes for other peers in the Monero P2P network and then continues
-        by asking those for their peers, and so on. If you have no bookmarked nodes
-        (or they don&apos;t tell us about their peers),
-        Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
-        scan stops when it finds 10 remote nodes in total.</p>
+	<p>Refresca a lista de Nós puxando para baixo &amp; favorito 3&#8211;5 nós para permitir que
+	o Monerujo escolha o melhor para ti!</p>
+        <h2>O que é&apos;s um Nó?</h2>
+	<p>O Monerujo usa um Nó remoto (por vezes chamado Daemon) para comunicar com a Rede do Monero
+	sem ter de descarregar e gravar uma copia inteira da blockchain.</p>
+        <h2>Lista de Nós</h2>
+	<p>Se a lista estiver vazia, podes adicionar um Nó manualmente ou deixar o Monerujo fazer um
+	scan à Rede por ti. Ou ambos. Continuar a ler em&#8230;</p>
+      	<p>A lista de nós mostra todos os nós actualmente conhecidos. Adicionalmente, o timestamp do
+	ultimo bloco conhecido é listado em cada nome do nó. Um icon a representar o tempo de resposta
+	do nó&apos; (que indica o nivel de conetividade esperado) é mostrado junto de cada nó.</p>
+        <p>Qualquer nó na lista pode ser adicionado aos favoritos por forma a usar mais tarde.
+	Nós que não forem adicionados como favoritos serão esquecidos.<p>
+        <p>O Monerujo irá escolher o melhor nó favorito cada vez que o usas.
+	Faz isto verificando a Altura (quanto mais actualizado esta cada nó) assim como a velocidade de
+	resposta (quão rapido responde este nó?).</p>
+        <p>A lista é disposta consoante estas caracteristicas, assim sendo no topo estará o nó que o 
+	Monerujo escolheria a cada momento. No fundo da lista ficam os nós mais lentos ou indisponiveis.</p>
+        <h2>Adicionar um Nó</h2>
+	<p>Tocando no botão &quot;Adicionar Nó&quot; no fundo, poderás adicionar os detalhes 
+	na janela de dialogo.
+	Em &quot;Endereço&quot; está o hostname ou endereço IP do nó - este é o unico campo necessário.
+	Introduz a &quot;Porta&quot; se o nó corre com uma porta nao standard (ex 18089).
+	Podes opcionalmente introduzir também um nome para mais facilmente o identificares mais tarde.
+	Alguns nós requerem credenciais para os usar, introduz o nome de usuario &amp;
+	e palavra passe nos campos disponibilizados. Agora podes &quot;Testar&quot; estas configurações. 
+        Os &quot;Resultados do Teste&quot; mostrarão a altura do bloco, tempo de resposta e IP usados.
+	O resultado pode também ser um erro - geralmente porque o Endereço introduzido está indisponivel
+	dentro de tempo util ou as credenciais estão incorretas.
+	Ou a combinação endereço/porta não aponta para um Nó de Monero!
+	Assim que o teste passar (sem erros) - podes&apos;pressionar &quot;OK&quot; para gravar &amp; 
+        favorito este nó.</p>
+        <h2>Procurar Nós</h2>
+	<p>Adicionalmente, podes procurar nós na Rede de Monero. O Monerujo vai realizar
+	uma busca na rede por nós remotos na porta 18089. Vai começar por procurar nos teus
+	nós favoritos por outros pares na rede P2P do Monero e depois continua perguntando 
+	a esses pares, e por ai fora. Se não tiveres nenhum nó favorito na tua lista o 
+	Monerujo irá usar directamente os nós base que estão inscritos no codigo do Monero.
+	A procura irá parar assim que encontrar 10 nós remotos no total.</p>
     ]]></string>
 
     <!-- Note for translators: new/changed text also in help_send -->
 
     <string name="help_uri"><![CDATA[
-        <h1>Using a payment link</h1>
-        <p>You have started monerujo with a payment link. In order to send funds, please do the following:</p>
+        <h1>Usando Endereço de Pagamento</h1>
+	<p>Iniciaste o Monerujo com um endereço de pagamento. Para enviar fundos, por favor faz o seguinte:</p>
         <p>
-        1. Open the wallet you want to spend from<br>
-        2. Wait until the wallet is synced &amp; the "Give" button appears<br>
-        3. Touch the "Give" button
+	1. Abre a carteira de onde pretendes gastar<br>
+	2. Espera até a carteira sincronizar &amp; e o botão "Enviar" aparecer<br>
+	3. Carrega no butão "Enviar"
         </p>
-        <p>The payment details will be filled in. Check them and proceed like for any other transaction.</p>
+	<p>Os detalhes do pagamento serão automaticamente preenchidos. Verifica e continua como em outra qualquer transação</p>
     ]]></string>
 
-    <string name="help_ok">Got it!</string> <!-- Note: "Got it" as in "I understand this" -->
+    <string name="help_ok">Entendido!</string> <!-- Note: "Got it" as in "I understand this" -->
 </resources>
